--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en" class="scroll-smooth">
+<link rel="icon" href="/public/IOTC Real Asset Logo_Favicon.png" />
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IOCT</title>
+  <title>IOTC</title>
   <script>
     (function (l) {
       if (l.search[1] === '/') {
